web-infras/parser/tests/fixtures/babel/core/uncategorised/467/output.txt
[SyntaxError]: Can not use with statement in strict mode (1,30)
1|(function () { 'use strict'; with (i); }())
 |                            ^
